<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/create_username" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/create_first_name" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/create_last_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/create_email" />

        <EditText
            android:id="@+id/desc"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:hint="@string/create_desc" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/create_pass" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/create__conf_pass" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/send_new_user" />

    </LinearLayout>
</ScrollView>