<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/actionBarToolbar"
    tools:context="com.example.kant.epiandroid.ResearchActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/app_bar" />

            <EditText
                android:id="@+id/title"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/title_event_post" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:hint="@string/desc_event_post" />

            <EditText
                android:id="@+id/date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_event_post" />

            <EditText
                android:id="@+id/hour"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hour_event_post" />

            <EditText
                android:id="@+id/adress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Adresse" />

            <LinearLayout
                android:id="@+id/image_loader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/load"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Load" />

                <ImageView
                    android:id="@+id/loaded_pic"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/small_magin" />
            </LinearLayout>


            <Button
                android:id="@+id/load_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200px"
                android:text="Select" />

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_event" />
        </LinearLayout>

    </ScrollView>

    <include layout="@layout/navdrawer" />
</android.support.v4.widget.DrawerLayout>